--- a/Dockerfile-spack-jupyter
+++ b/Dockerfile-spack-jupyter
@@ -18,7 +18,11 @@ RUN apt-get update && \
 RUN ln -s `which pip3.8` /usr/bin/pip3.8
 
 RUN pip3 -q install pip --upgrade && \
-  pip3 install notebook 
+  pip3 install \
+  notebook==6.4.12 \
+  jupyterhub==3.1.1 \
+  jupyterhub-firstuseauthenticator && \
+  npm install -g configurable-http-proxy
 
 RUN pip3 install \
   pandas \
@@ -28,21 +32,19 @@ RUN pip3 install \
   pyvista \
   pyvirtualdisplay \
   ipyvtklink \
-  jupyter_contrib_nbextensions \
   itkwidgets \
   ipywidgets==7.7 \
   pythreejs \
   ipyvtk-simple \
   panel \
-  jupyter-server \
-  jupyter \
-  jupyterhub-firstuseauthenticator && \
+  ipygany
+
+
+RUN pip3 install \
+  jupyter_contrib_nbextensions && \
   jupyter contrib nbextension install --sys-prefix && \
   jupyter nbextension install --py jupytext --sys-prefix && \
-  jupyter nbextension enable --py jupytext && \
-  jupyter nbextension install --py pythreejs --sys-prefix && \
-  jupyter nbextension enable --py pythreejs && \
-  npm install -g configurable-http-proxy
+  jupyter nbextension enable --py jupytext --sys-prefix   
 
 # allow jupyterlab for ipyvtk
 ENV DISPLAY=:99.0
