--- a/Dockerfile-spack-mofem
+++ b/Dockerfile-spack-mofem
@@ -6,7 +6,7 @@ ENV MOFEM_BRANCH=lukasz/develop
 
 RUN cd $MOFEM_INSTALL_DIR/ && \
   git clone -b $MOFEM_BRANCH https://bitbucket.org/likask/mofem-cephas.git && \
-  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules
+  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
   git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity
 
 ENV MOFEM_ENV_FILE=/etc/profile.d/mofem.sh
