bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -19,5 +19,5 @@ pipelines:
           - SRC_DIR=$PWD
           - . /mofem_install/spack/share/spack/setup-env.sh
           - spack dev-build --before build --source-path $SRC_DIR --test root mofem-cephas@lukasz~copy_user_modules target=x86_64 build_type=Release ^petsc+X 2>&1 | tee $SRC_DIR/logs.txt
-          - cd core* && sed -i 's/SITE:STRING=.*/SITE:STRING=Cactus/g' CMakeCache.txt && make rebuild_cache
+          - cd core* && sed -i "s/SITE:STRING=.*/SITE:STRING=$DOCKER_HOST/g" CMakeCache.txt && make rebuild_cache
           - ctest --output-on-failure -D Experimental 2>&1 | tee -a $SRC_DIR/logs.txt
