--- a/Dockerfile-spack-env
+++ b/Dockerfile-spack-env
@@ -70,7 +70,7 @@ RUN mkdir -p $SPACK_ROOT_DIR && \
     echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> ~/.bashrc && \
     spack external find && \
     spack install --only dependencies mofem-cephas@lukasz \
-    target=$TARGET build_type=Release ^petsc+X ^boost+python
+    target=$TARGET build_type=Release ^petsc+X ^boost+python+numpy
 
 # image run hook: the -l will make sure /etc/profile environments are loaded
 CMD        /bin/bash -l
