--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,3 +21,4 @@ pipelines:
           - spack dev-build --before build --source-path $SRC_DIR --test root mofem-cephas@lukasz~copy_user_modules target=x86_64 build_type=Release ^petsc+X 2>&1 | tee $SRC_DIR/logs.txt
           - cd core* && sed -i "s@SITE:STRING=.*@SITE:STRING=Cactus\nBUILDNAME:UNINITIALIZED=$BITBUCKET_BRANCH@g" CMakeCache.txt && make rebuild_cache
           - ctest --output-on-failure -D Experimental 2>&1 | tee -a $SRC_DIR/logs.txt
+          - make
