--- a/tutorials/vec-2/CMakeLists.txt
+++ b/tutorials/vec-2/CMakeLists.txt
@@ -18,6 +18,7 @@ set(permissions_execute
 tutorials_copy_and_install("*.msh" "${permissions_default}")
 tutorials_copy_and_install("*.cfg" "${permissions_default}")
 # tutorials_copy_and_install("*.jou" "${permissions_default}")
+tutorials_copy_and_install("meshes/*.cub" "${permissions_default}")
 tutorials_copy_and_install("*.cub" "${permissions_default}")
 tutorials_copy_and_install("*.h5m" "${permissions_default}")
 tutorials_copy_and_install("*.petsc" "${permissions_default}")
@@ -45,7 +46,7 @@ add_test(
   test_rotation_0_2d
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d
-  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/LShape_Rot_D0_2D.cub 
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_D0_2D.cub 
   -order 2 -ts_max_time 1.0 -ts_dt 0.05
   -log_no_color -test 2)
 
@@ -53,12 +54,51 @@ add_test(
   test_rotation_1_2d
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
   ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d
-  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/LShape_Rot_D1_2D.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_D1_2D.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
   -log_no_color -test 3)
 
 add_test(
-  test_rotation_mpc
+  test_nelastic_mpc_links
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d
-  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/LShape_Rot_MPC.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
-  -log_no_color -test 4)
+  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link.cub
+  -order 2 -ts_max_time 1.0 -ts_dt 0.05 
+  -log_no_color -test 4 -pc_type lu)
+
+  add_test(
+    test_nelastic_mpc_3_part
+    ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 3
+    ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
+    -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_3_part.h5m -order 2 -ts_max_time 1.0 -ts_dt 0.05 
+    -log_no_color -test 4 -pc_type lu)
+  
+  add_test(
+  test_nelastic_mpc_master
+  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_master.cub
+  -order 2 -ts_max_time 1.0 -ts_dt 0.05 
+  -log_no_color -test 5 -pc_type lu)
+
+
+add_test(
+  test_nelastic_mpc_master_swap
+  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_master_swap.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
+  -log_no_color -test 6 -pc_type lu)
+
+add_test(
+  test_nelastic_mpc_link_Y
+  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic_2d -ts_max_steps 25
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/LShape_Rot_MPC_link_Y.cub -order 2 -ts_max_time 1.0 -ts_dt 0.05
+  -log_no_color -test 7 -pc_type lu)
+
+add_test(
+  test_nelastic_mpc_link_3D_repr
+  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
+  ${CMAKE_CURRENT_BINARY_DIR}/nonlinear_elastic -ts_max_steps 25
+  -file_name ${CMAKE_CURRENT_SOURCE_DIR}/meshes/beam3D_MPCs.cub -order 1 -ts_dt 0.1 -ts_max_time 1.0 
+  -pc_type lu -log_no_color -test 8 -pc_type lu)
+
