--- a/mofem/MoFEMConfig.cmake.in
+++ b/mofem/MoFEMConfig.cmake.in
@@ -28,13 +28,13 @@ set(MoFEM_PRECOMPILED_HEADRES @PRECOMPILED_HEADRES@)
 # PETSc
 set(MoFEM_PETSC_DIR @PETSC_DIR@)
 set(MoFEM_PETSC_ARCH @PETSC_ARCH@)
-set(MoFEM_PETSCVAR_DIR @PETSCVAR_DIR@)
 set(MoFEM_PETSc_VERSION @PETSc_VERSION)
 set(MoFEM_MPI_RUN @MPI_RUN@)
 set(MoFEM_MPI_RUN_FLAGS @MPI_RUN_FLAGS@)
 set(PETSC_ARCH @PETSC_ARCH@)
 set(PETSC_HAVE_CUDA @PETSC_HAVE_CUDA@)
-set(PETSCVAR_PYTHON @PETSCVAR_PYTHON@)
+set(METIS_INCLUDE_DIRECTORIES @METIS_INCLUDE_DIRECTORIES@)
+set(PARMETIS_INCLUDE_DIRECTORIES @PARMETIS_INCLUDE_DIRECTORIES@)
 
 # MOAB
 set(MBCONVERT @MBCONVERT@)
