--- a/mofem/scripts/launch.json
+++ b/mofem/scripts/launch.json
@@ -7,11 +7,9 @@
             "name": "nonlinear_elastic",
             "program": "/mofem_install/jupyter/mofem/mofem_install/mofem-cephas/mofem/users_modules/um-build-Debug-5sehreo/tutorials/vec-2/nonlinear_elastic",
             "args": [
-                "-file_name",
-                "beam_3D.cub",
-                "-order",
-                "2",
-            ], // , "-log_quiet"
+                "-file_name", "beam_3D.cub",
+                "-order", "2",
+            ], 
             "cwd": "/mofem_install/jupyter/mofem/mofem_install/mofem-cephas/mofem/users_modules/um-build-Debug-5sehreo/tutorials/vec-2/",
             "preLaunchTask": "build_tutorials",
             "environment": [],
@@ -29,7 +27,6 @@
                     "ignoreFailures": true
                 }
             ]
-            // "stopOnEntry": true
         },
     ]
 }
