--- a/Dockerfile-spack-jupyter
+++ b/Dockerfile-spack-jupyter
@@ -51,6 +51,7 @@ RUN pip3 install \
   jupyter nbextension enable spellchecker/main --sys-prefix && \
   jupyter nbextension enable collapsible_headings/main --sys-prefix && \
   jupyter nbextension enable codefolding/main --sys-prefix && \
+  jupyter nbextension enable codefolding/edit --sys-prefix && \
   jupyter nbextension enable execute_time/ExecuteTime --sys-prefix 
 
 # allow jupyterlab for ipyvtk
