--- a/tutorials/adv-0/CMakeLists.txt
+++ b/tutorials/adv-0/CMakeLists.txt
@@ -31,6 +31,7 @@ tutorials_copy_and_install("*.jou" "${permissions_execute}")
 tutorials_copy_and_install("*.py" "${permissions_execute}")
 tutorials_copy_and_install("meshes/*" "${permissions_execute}")
 
+cmake_policy(SET CMP0144 NEW)
 set(BOOST_ROOT ${MoFEM_BOOST_DIR})
 message(STATUS ${BOOST_ROOT})
 find_package(
