--- a/Dockerfile-spack-mofem
+++ b/Dockerfile-spack-mofem
@@ -2,12 +2,12 @@ FROM likask/mofem-spack-env:latest
 
 LABEL maintainer="Lukasz.Kaczmarczyk@glasgow.ac.uk"
 
-ENV MOFEM_BRANCH=Workshop2023
+# ENV MOFEM_BRANCH=Workshop2023
 
 RUN cd $MOFEM_INSTALL_DIR/ && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/likask/mofem-cephas.git && \
-  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
-  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity
+  git clone -b adriana/Biosensors2024 https://bitbucket.org/mofem/mofem-cephas.git && \
+  git clone -b Workshop2023 https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
+  git clone -b adriana/jupyter https://bitbucket.org/AdrianaKul/um_softmech.git mofem-cephas/mofem/users_modules/softmech
 
 ENV MOFEM_ENV_FILE=/etc/profile.d/mofem.sh
 
