--- a/Dockerfile-spack-mofem
+++ b/Dockerfile-spack-mofem
@@ -5,9 +5,9 @@ LABEL maintainer="Lukasz.Kaczmarczyk@glasgow.ac.uk"
 ENV MOFEM_BRANCH=Workshop2023
 
 RUN cd $MOFEM_INSTALL_DIR/ && \
-  git clone -b $MOFEM_BRANCH https://bitbucket.org/likask/mofem-cephas.git && \
-  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
-  git clone -b $MOFEM_BRANCH https://likask@bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity
+  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/mofem-cephas.git && \
+  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/users-modules-cephas.git mofem-cephas/mofem/users_modules && \
+  git clone -b $MOFEM_BRANCH https://bitbucket.org/mofem/um_eshelbian_plasticity.git mofem-cephas/mofem/users_modules/eshelbian_plasticity
 
 ENV MOFEM_ENV_FILE=/etc/profile.d/mofem.sh
 
@@ -23,7 +23,9 @@ RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
   cd $MOFEM_INSTALL_DIR/core-build-Release-$MOFEM_CEPHAS_HASH && make clean && \
   touch $MOFEM_ENV_FILE && \
   echo ". $SPACK_ROOT_DIR/share/spack/setup-env.sh" >> $MOFEM_ENV_FILE && \
-  echo "export MOFEM_CEPHAS_HASH=$MOFEM_CEPHAS_HASH" >> $MOFEM_ENV_FILE
+  echo "export MOFEM_CEPHAS_HASH=$MOFEM_CEPHAS_HASH" >> $MOFEM_ENV_FILE && \
+  export TFEL_LIB=$(spack find -p tfel | grep tfel | awk '{print $2 "/lib"}') && \
+  echo "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$TFEL_LIB" >> $MOFEM_ENV_FILE
 
 # Install users mdoules
 RUN . $MOFEM_ENV_FILE && \
@@ -42,7 +44,7 @@ RUN . $MOFEM_ENV_FILE && \
   
 # Add MGIS to the ENV
 RUN . $SPACK_ROOT_DIR/share/spack/setup-env.sh && \
-    echo "#Load MGIS ENv" >> etc/bash.bashrc \
+    echo "#Load MGIS ENV" >> etc/bash.bashrc \
     spack load -sh mgis >> etc/bash.bashrc
 
 WORKDIR $MOFEM_INSTALL_DIR
