--- a/tutorials/adv-0/CMakeLists.txt
+++ b/tutorials/adv-0/CMakeLists.txt
@@ -51,10 +51,10 @@ if(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
 
   set_target_properties(
     plastic_3d PROPERTIES COMPILE_FLAGS 
-    "-DEXECUTABLE_DIMENSION=3 -DSCHUR_ASSEMBLE=1 -DPYTHON_SFD -DADD_CONTACT")
+    "-DEXECUTABLE_DIMENSION=3 -DSCHUR_ASSEMBLE=1 -DPYTHON_SDF -DADD_CONTACT")
   set_target_properties(
     plastic_2d PROPERTIES COMPILE_FLAGS 
-    "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1 -DPYTHON_SFD -DADD_CONTACT")
+    "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1 -DPYTHON_SDF -DADD_CONTACT")
 
   target_link_libraries(plastic_2d ${Python_LIBRARY} ${Boost_LIBRARIES})
   target_link_libraries(plastic_3d ${Python_LIBRARY} ${Boost_LIBRARIES})
