--- a/tutorials/adv-1/CMakeLists.txt
+++ b/tutorials/adv-1/CMakeLists.txt
@@ -50,14 +50,14 @@ if(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
     contact_3d_schur ${CMAKE_CURRENT_SOURCE_DIR}/contact.cpp)
 
   set_target_properties(
-    contact_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DASSEMBLY_TYPE=PETSC -DPYTHON_SDF") 
+    contact_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DPYTHON_SDF") 
   set_target_properties(
-    contact_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DASSEMBLY_TYPE=PETSC -DPYTHON_SDF") 
+    contact_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DPYTHON_SDF") 
 
   set_target_properties(
-    contact_2d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DASSEMBLY_TYPE=SCHUR -DPYTHON_SDF") 
+    contact_2d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1 -DPYTHON_SDF") 
   set_target_properties(
-    contact_3d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DASSEMBLY_TYPE=SCHUR -DPYTHON_SDF") 
+    contact_3d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DSCHUR_ASSEMBLE=1 -DPYTHON_SDF") 
 
   target_link_libraries(contact_2d ${Python_LIBRARY} ${Boost_LIBRARIES})
   target_link_libraries(contact_3d ${Python_LIBRARY} ${Boost_LIBRARIES})
@@ -78,14 +78,14 @@ else (Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
     contact_3d_schur ${CMAKE_CURRENT_SOURCE_DIR}/contact.cpp)
 
   set_target_properties(
-    contact_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DASSEMBLY_TYPE=PETSC")
+    contact_2d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2")
   set_target_properties(
-    contact_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DASSEMBLY_TYPE=PETSC")  
+    contact_3d PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3")  
   
   set_target_properties(
-    contact_2d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DASSEMBLY_TYPE=SCHUR")
+    contact_2d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1")
   set_target_properties(
-    contact_3d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DASSEMBLY_TYPE=SCHUR")  
+    contact_3d_schur PROPERTIES COMPILE_FLAGS "-DEXECUTABLE_DIMENSION=3 -DSCHUR_ASSEMBLE=1")  
 
 endif(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
 
