--- a/mofem/MoFEMConfig.cmake.in
+++ b/mofem/MoFEMConfig.cmake.in
@@ -35,6 +35,7 @@ set(PETSC_ARCH @PETSC_ARCH@)
 set(PETSC_HAVE_CUDA @PETSC_HAVE_CUDA@)
 set(METIS_INCLUDE_DIRECTORIES @METIS_INCLUDE_DIRECTORIES@)
 set(PARMETIS_INCLUDE_DIRECTORIES @PARMETIS_INCLUDE_DIRECTORIES@)
+set(PETSCVAR_PYTHON @PETSCVAR_PYTHON@)
 
 # MOAB
 set(MBCONVERT @MBCONVERT@)
