--- a/mofem/CMakeLists.txt
+++ b/mofem/CMakeLists.txt
@@ -170,6 +170,16 @@ include(cmake/FindMESHKIT.cmake)
 # Find boost
 include(cmake/FindBoost.cmake)
 
+# Python
+message(STATUS "PETSCVAR_PYTHON ${PETSCVAR_PYTHON}")
+execute_process( COMMAND ${PETSCVAR_PYTHON} -c 
+  "import sys; print(sys.exec_prefix)" 
+  OUTPUT_VARIABLE Python_ROOT_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
+execute_process( COMMAND ${Python_ROOT_DIR}/bin/python3-config --embed --includes 
+  OUTPUT_VARIABLE Python_INCLUDES_CONFIG)
+execute_process( COMMAND ${Python_ROOT_DIR}/bin/python3-config --embed --ldflags 
+  OUTPUT_VARIABLE Python_LIBRARY_CONFIG)
+
 # Other tools
 include(cmake/FindADOL-C.cmake)
 include(cmake/FindTetGen.cmake)
@@ -207,7 +217,8 @@ endif(WITHCOVERAGE)
 
 resolve_includes(PROJECT_INCLUDE_DIRECTORIES 
   "${PETSCVAR_PACKAGES_INCLUDES}
-  ${MOAB_INCLUDES0} ${MOAB_INCLUDES1} ${MOAB_CPPFLAGS}")
+  ${MOAB_INCLUDES0} ${MOAB_INCLUDES1} ${MOAB_CPPFLAGS}
+  ${Python_INCLUDES_CONFIG}")
 
 # Check CBlas
 find_path(
@@ -260,6 +271,8 @@ resolve_libraries(SYSTEM_PROJECT_LIBS "
   ${SLEPC_LINK_LIBRARIES}
   -L${PETSC_DIR}/${PETSC_ARCH}/lib
   ${PETSCVAR_PETSC_WITH_EXTERNAL_LIB}
+# Python
+  ${Python_LIBRARY_CONFIG}
 # Boost
   ${Boost_LIBRARIES}
   ${Boost_FILESYSTEM_LIBRARY_RELEASE}
