--- a/tutorials/adv-0/CMakeLists.txt
+++ b/tutorials/adv-0/CMakeLists.txt
@@ -31,16 +31,7 @@ tutorials_copy_and_install("*.jou" "${permissions_execute}")
 tutorials_copy_and_install("*.py" "${permissions_execute}")
 tutorials_copy_and_install("meshes/*" "${permissions_execute}")
 
-# cmake_policy(SET CMP0144 NEW)
-set(BOOST_ROOT ${MoFEM_BOOST_DIR})
-message(STATUS ${BOOST_ROOT})
-find_package(
-  Boost
-  OPTIONAL_COMPONENTS
-  numpy
-)
-
-if(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE) 
+if(Boost_NUMPY_LIBRARY_RELEASE) 
   
   include_directories(${_Python_INCLUDE_DIR})
 
@@ -56,10 +47,10 @@ if(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
     plastic_2d PROPERTIES COMPILE_FLAGS 
     "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1 -DPYTHON_SDF -DADD_CONTACT")
 
-  target_link_libraries(plastic_2d ${Python_LIBRARY} ${Boost_LIBRARIES})
-  target_link_libraries(plastic_3d ${Python_LIBRARY} ${Boost_LIBRARIES})
+  target_link_libraries(plastic_2d ${Boost_LIBRARIES})
+  target_link_libraries(plastic_3d ${Boost_LIBRARIES})
 
-else (Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
+else (Boost_NUMPY_LIBRARY_RELEASE)
 
 
   tutorials_build_and_install(
@@ -74,7 +65,7 @@ else (Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
     plastic_2d PROPERTIES COMPILE_FLAGS 
     "-DEXECUTABLE_DIMENSION=2 -DSCHUR_ASSEMBLE=1")
 
-endif(Python_LIBRARY AND Boost_NUMPY_LIBRARY_RELEASE)
+endif(Boost_NUMPY_LIBRARY_RELEASE)
 
 add_test(
   plastic_3d_necking
