--- a/tutorials/adv-1/CMakeLists.txt
+++ b/tutorials/adv-1/CMakeLists.txt
@@ -137,37 +137,26 @@ add_custom_target(
 #################
 
 add_test(
-  contact_2d
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  contact_2d
-  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/sphere_2d.h5m
-  -pc_type lu 
-  -ts_type beuler
-  -ts_max_time 1 -ts_dt 0.2 
-  -spring_stiffness 0.1
-  -log_no_color
-  -sdf_file ${CMAKE_CURRENT_BINARY_DIR}/sdf_files/sdf_ydirection.py
-)
-
-add_test(
-  contact_2d_schur
-  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 1
-  contact_2d_schur
-  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/sphere_2d.h5m
-  -pc_type fieldsplit
-  -ts_type beuler
-  -ts_max_time 1 -ts_dt 0.2 
-  -spring_stiffness 0.1
-  -log_no_color
-  -sdf_file ${CMAKE_CURRENT_BINARY_DIR}/sdf_files/sdf_ydirection.py
-)
-
-add_test(
   hertz_3d
   ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
   contact_3d
   -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
   -pc_type lu
+  -ts_type beuler
+  -ts_max_time 1 -ts_dt 1
+  -sdf_file ./sdf_files/sdf_hertz_3d.py
+  -young_modulus 1e3
+  -poisson_ratio 0.4
+  -atom_test 2
+  -hencky_small_strain 1
+)
+
+add_test(
+  hertz_3d_schur
+  ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
+  contact_3d_schur
+  -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_3d_4p.h5m
+  -pc_type fieldsplit
   -ts_type beuler
   -ts_max_time 1 -ts_dt 1
   -sdf_file ./sdf_files/sdf_hertz_3d.py
@@ -196,7 +185,7 @@ if(IS_MFRONT_MOD)
       hertz_mfront_axisymm
       ${MoFEM_MPI_RUN} ${MPI_RUN_FLAGS} -np 4
       contact_2d
-      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_axisymm_4p.h5m
+      -file_name ${CMAKE_CURRENT_BINARY_DIR}/mesh_files/hertz_2d_4p.h5m
       -pc_type lu
       -ts_type beuler
       -ts_max_time 1 -ts_dt 0.2 
